# tari-javascript-sdk

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  DEPRECATED_DEPS.md  DEVELOPER_SETUP.md  LICENSE  README.md  TESTING.md  benchmark-results.json  eslint.config.js  jest.config.e2e.js  jest.config.integration.js  jest.config.js  jest.config.performance.js  jest.config.unit.js  jest.setup.js  package-lock.json  package.json  performance-baselines.json  performance-summary.json  performance-summary.txt  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json  typedoc.json
.github/: build-matrix.json  dependabot.yml
.github/workflows/: README.md  build-native.yml  ci.yml  docs.yml  release.yml  test.yml
.tari-cache/: tari-current  tari-mainnet-v4.3.1.meta.json
docs/: README.md  api-reference.md  development.md  docusaurus.config.js  getting-started.md  package.json  sidebars.js  tauri-integration.md  troubleshooting.md
docs/docs/: introduction.md
docs/docs/development/: network-builds.md
docs/docs/getting-started/: installation.md  quick-start.md
docs/docs/troubleshooting/: common-errors.md  faq.md
docs/src/css/: custom.css
docs/static/img/: .gitkeep
examples/: README.md  package.json
examples/exchange-basic/: .env.example  .env.example.doc  README.md  index.js  package.json  simple-demo.js
examples/manual-tests/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
examples/node-console/: README.md  index.ts  package.json  tsconfig.json
examples/tauri-wallet-app/: .eslintrc.cjs  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  index.html  jest.config.js  package.json  vite.config.ts
examples/tauri-wallet-app/src/: App.tsx
examples/tauri-wallet-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-wallet-app/src-tauri/capabilities/: default.json
examples/tauri-wallet-app/src-tauri/src/: commands.rs  error.rs  main.rs  storage.rs  wallet.rs
examples/tauri-wallet-app/src/__tests__/: setup.ts
examples/tauri-wallet-app/src/__tests__/components/: WalletDashboard.test.tsx
examples/tauri-wallet-app/src/components/: AddressDisplay.tsx  BalanceDisplay.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  StorageMetrics.tsx  TransactionForm.tsx  TransactionHistory.tsx  WalletDashboard.tsx
examples/tauri-wallet-app/src/hooks/: useWallet.ts
examples/tauri-wallet-app/src/services/: TauriWalletService.ts
examples/tauri-wallet-app/src/styles/: globals.css
examples/tauri-wallet-app/src/types/: tauri.d.ts  wallet.ts
examples/tauri-wallet-app/src/utils/: formatting.ts  validation.ts
examples/wallet-cli/: index.js  package.json
integration-tests/: exchange-simulation.test.ts
native/: .gitignore  Cargo.toml  build.rs  keychain-bridge-enhanced.rs  keychain-bridge-simple.rs  keychain-bridge.rs  libsecret-fallback-bridge.rs  windows-credential-bridge.rs
native/.cargo/: config.toml
native/src/: lib.rs
native/src/keychain/: access_control.rs  mod.rs  security_framework.rs  touch_id.rs
native/src/linux/: bindings.rs  libsecret.rs  mod.rs
native/src/tauri/: commands.rs  mod.rs  platform.rs  storage.rs
native/src/windows/: credential_manager.rs  dpapi.rs  mod.rs
native/tari-wallet-ffi/: Cargo.toml  build.rs
native/tari-wallet-ffi/src/: callbacks.rs  error.rs  error_codes.rs  error_mapping.rs  event_bridge.rs  lib.rs  types.rs  wallet.rs
scripts/: build-all-networks.sh  build-all.sh  build-docs.sh  build-native.sh  build-networks.sh  build-ordered.sh  clean-rebuild.sh  clean.sh  deploy-docs.sh  lint-cleanup.sh  node-transform.js  prepare-release.js  setup-tari-source.sh  setup-tari.mjs  test-all.sh  test-native.sh  test-security.sh  test-tauri.sh  type-cleanup.sh  validate-build.sh
test-results/: test-report-20250614-163821.md
tests/docs/: testing-guidelines.md
tests/fixtures/: test-credentials.ts
tests/mocks/: ffi-bindings.ts  ffi-loader-mock.ts  native-module.js  platform-mocks.ts  polyfill-mock.ts  tauri-mocks.ts
tests/performance/: benchmark-reporter.js  global-setup.ts  global-teardown.ts  network-benchmark.test.ts  performance-setup.ts
tests/setup/: e2e-setup.ts  integration-setup.ts  network-check.ts  unit-setup.ts  unit-test-setup.ts
tests/tauri/: tauri-security.test.ts  tauri-storage.test.ts
tests/utils/: bigint-serializer.js  bigint-serializer.ts  serialization.ts  test-debug-helpers.ts  test-isolation.ts
