[workspace]
members = ["tari-wallet-ffi"]
resolver = "2"

[workspace.dependencies]
napi = "2.16"
napi-derive = "2.16"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"


