[package]
name = "tari-secure-storage"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Cross-platform secure storage native module for Tari JavaScript SDK"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["tari-wallet-ffi"]
resolver = "2"

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.16"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
tokio = { version = "1.35", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation"
] }

[target.'cfg(target_os = "linux")'.dependencies]
libsecret = { version = "0.6", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.20", optional = true }
libc = "0.2"
pkg-config = "0.3"

[features]
default = ["linux-libsecret"]
linux-libsecret = ["libsecret", "glib", "gio"]

[build-dependencies]
napi-build = "2.0"
chrono = "0.4"

[workspace.dependencies]
napi = "2.16"
napi-derive = "2.16"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }


