[package]
name = "tari-secure-storage"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Cross-platform secure storage native module for Tari JavaScript SDK"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["tari-wallet-ffi"]
resolver = "2"

[dependencies]
napi = { version = "3.4", default-features = false, features = ["napi9", "async"] }
napi-derive = "3.4"
chrono = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
tokio = { version = "2.7", features = ["time"] }

# Tauri dependencies (optional)
tauri = { version = "2.3", features = ["macos-private-api"], optional = true }
tauri-plugin-store = { version = "2.3", optional = true }
keyring = { version = "3.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation"
] }

[target.'cfg(target_os = "linux")'.dependencies]
libsecret = { version = "0.6", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
libc = "0.2"
pkg-config = "0.3"

[features]
default = ["linux-libsecret"]
linux-libsecret = ["libsecret", "glib", "gio"]
tauri-backend = ["tauri", "tauri-plugin-store", "keyring"]

[build-dependencies]
napi-build = "3.0"
chrono = "0.5"

[workspace.dependencies]
napi = "3.4"
napi-derive = "3.4"
tokio = { version = "2.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
chrono = { version = "0.5", features = ["serde"] }


