[package]
name = "tari-wallet-ffi"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
authors = ["The Tari Community"]
description = "NAPI-RS FFI bindings for Tari wallet functionality"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["napi4", "tokio_rt"] }
napi-derive = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }

# Tari FFI dependency (path will be set dynamically during build)
# minotari_wallet_ffi = { path = "../../.tari-cache/tari-current/base_layer/wallet_ffi" }

[build-dependencies]
napi-build = "2.1"
chrono = "0.4"

[features]
default = ["wallet"]
wallet = []
