[package]
name = "tauri-wallet-app"
version = "0.1.0"
description = "Complete Tauri wallet application example using the Tari JavaScript SDK"
authors = ["Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-javascript-sdk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Tari SDK dependencies - using real FFI bindings
minotari_wallet_ffi = { git = "https://github.com/tari-project/tari.git", branch = "development" }

# Cross-platform secure storage
keyring = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincrypt", "dpapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
